[gd_scene load_steps=17 format=3 uid="uid://c3fc5ai7e1pt3"]

[ext_resource type="Script" path="res://Scenes/town/town.gd" id="1_0dvok"]
[ext_resource type="Texture2D" uid="uid://dtbra717lfuy3" path="res://Graphics/backgrounds/town/town.jpg" id="2_kbuep"]
[ext_resource type="LabelSettings" uid="uid://dqpqpk2ys3h25" path="res://Utilities/Themes/menu_header_text.tres" id="4_iwohm"]
[ext_resource type="AudioStream" uid="uid://cg5pfak8ak0km" path="res://Sounds/music/40-Costa del Sol.mp3" id="4_qnde4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6e1n"]
bg_color = Color(0.266667, 0, 0.431373, 0.564706)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.37551, 0.00165262, 0.653501, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0idu"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.235294, 0, 0.392157, 0.352941)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.317647, 0, 0.552941, 0.764706)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_om1qu"]
bg_color = Color(0.262745, 0, 0.407843, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.174508, 2.11896e-05, 0.174507, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsgpc"]
bg_color = Color(0.261345, 0.00056828, 0.408267, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.174508, 2.11896e-05, 0.174507, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ja303"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.23739, 0.000526767, 0.386979, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3157, 0.00115297, 0.554708, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6q1v"]
bg_color = Color(0.392157, 0, 0.6, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.174508, 2.11896e-05, 0.174507, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_offset = Vector2(-1, 1)

[sub_resource type="Theme" id="Theme_645hn"]
Button/colors/font_color = Color(0.901961, 0.811765, 1, 1)
Button/colors/font_disabled_color = Color(0.364706, 0.364706, 0.364706, 0.560784)
Button/colors/font_focus_color = Color(1, 0.776471, 0.984314, 1)
Button/colors/font_hover_color = Color(1, 0.776471, 0.984314, 1)
Button/colors/font_hover_pressed_color = Color(1, 0.776471, 0.984314, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/constants/align_to_largest_stylebox = 1
Button/icons/icon = null
Button/styles/disabled = SubResource("StyleBoxFlat_r0idu")
Button/styles/focus = SubResource("StyleBoxFlat_om1qu")
Button/styles/hover = SubResource("StyleBoxFlat_tsgpc")
Button/styles/normal = SubResource("StyleBoxFlat_ja303")
Button/styles/pressed = SubResource("StyleBoxFlat_r6q1v")

[sub_resource type="LabelSettings" id="LabelSettings_w5vr2"]
outline_size = 3
outline_color = Color(0.511823, 0.00163933, 0.714915, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_id7wt"]
outline_size = 3
outline_color = Color(0.511823, 0.00163933, 0.714915, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_pt6i0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.920995, 0.920995, 0.920995, 1)]
}

[sub_resource type="Animation" id="Animation_vioa7"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_fade_out_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 2),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Color(0.920995, 0.920995, 0.920995, 1), Color(0.0156863, 0.0156863, 0.0156863, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m1naw"]
_data = {
"RESET": SubResource("Animation_pt6i0"),
"fade_out": SubResource("Animation_vioa7")
}

[node name="Town" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0dvok")

[node name="ColorRect" type="TextureRect" parent="."]
self_modulate = Color(0.920995, 0.920995, 0.920995, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_kbuep")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -74.0
offset_right = 149.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Town"
label_settings = ExtResource("4_iwohm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TownMenuContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_d6e1n")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TownMenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="UI" type="VBoxContainer" parent="VBoxContainer/TownMenuContainer/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_645hn")

[node name="Options" type="HBoxContainer" parent="VBoxContainer/TownMenuContainer/MarginContainer/UI"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="Recruit" type="VBoxContainer" parent="VBoxContainer/TownMenuContainer/MarginContainer/UI/Options"]
layout_mode = 2

[node name="Description" type="Label" parent="VBoxContainer/TownMenuContainer/MarginContainer/UI/Options/Recruit"]
layout_mode = 2
text = "Recruit Party"
label_settings = SubResource("LabelSettings_w5vr2")
horizontal_alignment = 1

[node name="RecruitButton" type="Button" parent="VBoxContainer/TownMenuContainer/MarginContainer/UI/Options/Recruit"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Recruit (100G)"

[node name="Inn" type="VBoxContainer" parent="VBoxContainer/TownMenuContainer/MarginContainer/UI/Options"]
layout_mode = 2

[node name="Description" type="Label" parent="VBoxContainer/TownMenuContainer/MarginContainer/UI/Options/Inn"]
layout_mode = 2
text = "+50% HP & MP"
label_settings = SubResource("LabelSettings_id7wt")
horizontal_alignment = 1

[node name="InnButton" type="Button" parent="VBoxContainer/TownMenuContainer/MarginContainer/UI/Options/Inn"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Rest at Inn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m1naw")
}

[node name="TownMusic" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_qnde4")
volume_db = -10.0
autoplay = true

[node name="RestSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
volume_db = -15.0

[connection signal="pressed" from="VBoxContainer/TownMenuContainer/MarginContainer/UI/Options/Recruit/RecruitButton" to="." method="_on_recruit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TownMenuContainer/MarginContainer/UI/Options/Inn/InnButton" to="." method="_on_inn_button_pressed"]
